RESOLVED FIXED143946
AX: iOS: Text input field ignores value of read-only and aria-readonly attributes
https://bugs.webkit.org/show_bug.cgi?id=143946
Summary AX: iOS: Text input field ignores value of read-only and aria-readonly attrib...
chris fleizach
Reported 2015-04-20 00:45:58 PDT
VoiceOver does not seem to recognize read-only input fields. <rdar://problem/19385811>
Attachments
patch (1.45 KB, patch)
2015-04-20 00:49 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2015-04-20 00:49:56 PDT
WebKit Commit Bot
Comment 2 2015-04-20 08:06:47 PDT
Comment on attachment 251150 [details] patch Clearing flags on attachment: 251150 Committed r183011: <http://trac.webkit.org/changeset/183011>
WebKit Commit Bot
Comment 3 2015-04-20 08:06:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.