AX: iOS: Text input field ignores value of read-only and aria-readonly attributes https://bugs.webkit.org/show_bug.cgi?id=143946

Reviewed by Mario Sanchez Prada.

Expose an existing method for determining whether the value can be set to the iOS accessibility platform.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityCanSetValue]):


Canonical link: https://commits.webkit.org/161932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183011 268f45cc-cd09-0410-ab3c-d52691b4dbfc